--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -10,3 +10,15 @@ ul { list-style-type: none; }
 .list-group-item.white { background: white; }
 
 .form-horizontal { padding-left:20px; padding-right:20px; }
+
+ul.tasks li {
+	a { font-weight: normal; }
+	ul.task li { margin: 5px; padding: 10px; border: 1px solid white;
+		a { font-weight: normal; }
+		.order { display: inline-block; width: 20px; }
+		.checked { display: inline-block; width: 15px; }
+		.title { display: inline-block; width: 360px; }
+		.due { display: inline-block; width: 140px; }
+		.completed { display: inline-block; width: 140px; }
+	}
+}
