--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -14,12 +14,12 @@
 	.form-group
 		= f.label :title, :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.text_field :title, :class => "form-control autofocus"
+			= f.text_field :title, :class => "form-control"
 
 	.form-group
 		= f.label :first_name, :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.text_field :first_name, :class => "form-control"
+			= f.text_field :first_name, :class => "form-control", :autofocus => true
 
 	.form-group
 		= f.label :last_name, :class => "control-label col-sm-2"
