--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -51,15 +51,16 @@
 								%li.dropdown-header Edit Elements
 								%li{ :class => "#{params[:controller].eql?("notes") ? "active" : ""}" }= link_to "Notes", :notes
 								%li{ :class => "#{params[:controller].eql?("tasks") ? "active" : ""}" }= link_to "Tasks", :tasks
-					- if signed_in?
-						%li.dropdown.active
-							%a.dropdown-toggle.pull-right{ :href => "#", :"data-toggle" => "dropdown", :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }
-								= @current_user.name
-								%b.caret
-							%ul.dropdown-menu
-								%li{ :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }= link_to "My Profile", edit_user_path(@current_user)
-								%li.divider
-								%li= link_to "Sign out", signout_path, method: "delete"
-					- else
-						%li.navebar-right.active= link_to "Sign in", signin_path
+					%ul.nav.navbar-nav.navbar-right
+						- if signed_in?
+							%li.dropdown.active
+								%a.dropdown-toggle.pull-right{ :href => "#", :"data-toggle" => "dropdown", :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }
+									= @current_user.name
+									%b.caret
+								%ul.dropdown-menu
+									%li{ :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }= link_to "My Profile", edit_user_path(@current_user)
+									%li.divider
+									%li= link_to "Sign out", signout_path, method: "delete"
+						- else
+							%li.navebar-right.active= link_to "Sign in", signin_path
 
