--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New note</h1>
 
-<%= render 'form' %>
+<%= link_to '<< All Notes', notes_path %>
 
-<%= link_to 'Index', notes_path %>
+<%= render 'form' %>
