--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -12,7 +12,7 @@
 	.form-group
 		= f.label :name, :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.text_field :name, :class => "form-control autofocus"
+			= f.text_field :name, :class => "form-control", :autofocus => true
 
 	.form-group
 		= f.label :email, :class => "control-label col-sm-2"
