--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,20 +1,18 @@
 %p#notice= notice
 
-= link_to "<< Back to Index", users_path
-%br
-%br
-%br
+%aside.span4
+	%section
+		%h1
+			= gravatar_for(@user)
+			= @user.name
+			&nbsp;&nbsp;&nbsp;
+			= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_user_path(@user), html = {:title => "Edit"} if current_user?(@user) || is_admin?
 %br
 
-.col-sm-4
-	.row
-		%aside.span4
-			%section
-				%h1
-					= gravatar_for(@user)
-					= @user.name
-					&nbsp;&nbsp;&nbsp;
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_user_path(@user), html = {:title => "Edit"} if current_user?(@user) || is_admin?
-			= @user.email
+= link_to "<< All Users", users_path
+%br
+%br
+%br
+= @user.email
 
 %div{ :style => "clear:both;" }
