--- a/app/views/finances/show.html.haml
+++ b/app/views/finances/show.html.haml
@@ -45,7 +45,11 @@
 					- tot_hours += n.time_taken
 
 	%li.list-group-item
-		%span.reference Total
-		%span.paid= number_to_currency(tot_received, unit: "&pound;".html_safe)
-		%span.owing= number_to_currency(tot_owing, unit: "&pound;".html_safe)
-		%span.time= tot_hours.to_s + " h".html_safe
+		%span.reference
+			%strong Total
+		%span.paid
+			%strong= number_to_currency(tot_received, unit: "&pound;".html_safe)
+		%span.owing
+			%strong= number_to_currency(tot_owing, unit: "&pound;".html_safe)
+		%span.time
+			%strong= tot_hours.to_s + " h".html_safe
