--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -19,8 +19,21 @@ li.job {
 .pull-right a.btn { margin-top: 3px; margin-right: 16px; }
 .task-list-holder { width: 24%; }
 .task-list { min-width: 200px; }
-.job-list { width: 73%; min-width: 300px; float: left;
+.job-list { min-width: 300px; float: left;
 	ul { padding-left: 7px; }
+}
+
+/* Notes on job#show page */
+table.notes { width: 74%; float: left;
+	tbody tr td { padding: 8px 5px;
+		&.the-date { width: 125px; }
+		&.title { width: 300px; }
+		&.type { width: 85px; }
+		&.paid { width: 80px; color: green; text-align: right; margin-right: 5px; }
+		&.owing { width: 80px; color: red; text-align: right; margin-right: 5px; }
+		&.time { width: 60px; text-align: right; }
+		&.mileage { width: 60px; text-align: right; }
+	}
 }
 
 .panel-heading.hand, .list-group-item.hand { cursor: pointer; }
@@ -33,3 +46,23 @@ li.job {
 	.ui-datepicker-title { text-align: center; }
 	.ui-state-active { background-color: red; }
 }
+
+ul.task-list {
+	li.task {
+		display: inline-block;
+		width: 240px;
+		height: 180px;
+		border: solid 1px black;
+		margin: 10px;
+		vertical-align: top;
+		padding: 15px;
+		background: darkslategrey;
+		color: wheat;
+		text-align: left;
+		h2 { font-size: 16px; }
+		p.joblink { padding-left: 0px; font-size: 18px; border-bottom: 1px solid #ddd; padding-bottom: 5px; }
+		.due-date { float: right; }
+	}
+}
+
+#myModalCreated.created { float: left; font-size: 11px; }
