--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -9,8 +9,8 @@
 
 = render :partial => "jobs_header"
 
-.task-list-holder.pull-right{ :style => "max-height:1000px; overflow-y:scroll;" }
-	= render :partial => "shared/tasklist", :object => @tasks if @tasks.any?
+-#.task-list-holder.pull-right{ :style => "max-height:1000px; overflow-y:scroll;" }
+-#	= render :partial => "shared/tasklist", :object => @tasks if @tasks.any?
 
 .job-list
 	%ul
