--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,28 +1,4 @@
 %header
-	/
-		.navbar.navbar-fixed-top.navbar-inverse
-			.navbar-inner
-				.container
-					= link_to "sample app", root_path, id: "logo"
-					%nav
-						%ul.nav.pull-right
-							%li= link_to "Home", root_path
-							-#%li= link_to "Help", help_path
-							- if signed_in?
-								%li= link_to "Users", '#'
-								%li#fat-menu.dropdown
-									%a.dropdown-toggle{ :href=>"#", :"data-toggle"=>"dropdown" }
-										Account
-										%b.caret
-									%ul.dropdown-menu
-										%li= link_to "Profile", current_user
-										%li= link_to "Settings", '#'
-										%li.divider
-										%li
-											= link_to "Sign out", signout_path, method: "delete"
-							- else
-								%li.navbar-right= link_to "Sign in", signin_path
-
 	/ Fixed navbar
 	.navbar.navbar-inverse.navbar-fixed-top{ :role => "navigation" }
 		.container
@@ -42,6 +18,7 @@
 						- b_on = params[:controller].eql?("template_tasks") ||  params[:controller].eql?("users") ||  params[:controller].eql?("notes") || params[:controller].eql?("tasks")
 						%li.dropdown{ :class => "#{b_on ? "active" : ""}" }
 							%a.dropdown-toggle{ :href => "#", :"data-toggle" => "dropdown" }
+								%span.glyphicon.glyphicon-cog{ :style => "padding-right:5px;" }
 								Admin
 								%b.caret
 							%ul.dropdown-menu
@@ -51,16 +28,17 @@
 								%li.dropdown-header Edit Elements
 								%li{ :class => "#{params[:controller].eql?("notes") ? "active" : ""}" }= link_to "Notes", :notes
 								%li{ :class => "#{params[:controller].eql?("tasks") ? "active" : ""}" }= link_to "Tasks", :tasks
-					%ul.nav.navbar-nav.navbar-right
-						- if signed_in?
-							%li.dropdown.active
-								%a.dropdown-toggle.pull-right{ :href => "#", :"data-toggle" => "dropdown", :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }
-									= @current_user.name
-									%b.caret
-								%ul.dropdown-menu
-									%li{ :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }= link_to "My Profile", edit_user_path(@current_user)
-									%li.divider
-									%li= link_to "Sign out", signout_path, method: "delete"
-						- else
-							%li.navebar-right.active= link_to "Sign in", signin_path
+				%ul.nav.navbar-nav.navbar-right
+					- if signed_in?
+						%li.dropdown.active
+							%a.dropdown-toggle.pull-right{ :href => "#", :"data-toggle" => "dropdown", :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }
+								%span.glyphicon.glyphicon-user{ :style => "padding-right:10px;" }
+								= @current_user.name
+								%b.caret
+							%ul.dropdown-menu
+								%li{ :class => "#{"active" if params[:controller].eql?("users") && @user && @user == @current_user}" }= link_to "My Profile", edit_user_path(@current_user)
+								%li.divider
+								%li= link_to "Sign out", signout_path, method: "delete"
+					- else
+						%li.navebar-right.active= link_to "Sign in", signin_path
 
