--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -1,9 +1,3 @@
-:javascript
-	jQuery(function() {
-		jQuery( "#note_the_date" ).datepicker( { dateFormat: 'dd M yy' } );
-		jQuery( "#note_the_date" ).datepicker( "option", "defaultDate", "#{@note.the_date.blank? ? DateTime.now().strftime('%d %b %Y') :  @note.the_date.strftime('%d %b %Y')}" );
-	});
-
 = form_for(@note, :html => { :class => "form-horizontal", :role => "form" }) do |f|
 	- if @note.errors.any?
 		#error_explanation
@@ -26,8 +20,7 @@
 	.form-group
 		= f.label :Date, :class => "control-label col-sm-2"
 		.col-sm-5
-			- val = @note.the_date.blank? ? (@note.created_at.blank? ? DateTime.now.strftime("%d %b %Y") : @note.created_at.strftime("%d %b %Y")) : @note.the_date.strftime("%d %b %Y")
-			= f.text_field :the_date, :value => val, :class => "form-control autofocus"
+			= f.text_field :the_date, :class => "form-control autofocus"
 
 	.form-group
 		= f.label :title, :class => "control-label col-sm-2"
@@ -69,3 +62,14 @@
 	.actions
 		.col-sm-offset-2
 			= f.submit class: "btn btn-primary"
+
+:javascript
+	jQuery(function() {
+		jQuery( "#note_the_date" ).datetimepicker( { timeFormat: 'HH:mm', dateFormat: 'dd M yy', showSecond: false, separator: ' ' } );
+
+		var def_date = "#{@note.the_date.blank? ? (@note.created_at.blank? ? DateTime.now.strftime('%d %b %Y %H:%M') : @note.created_at.strftime('%d %b %Y %H:%M')) : @note.the_date.strftime('%d %b %Y %H:%M')}";
+
+		jQuery( "#note_the_date" ).datetimepicker( "option", "defaultDate", def_date );
+		jQuery( "#note_the_date" ).val( def_date );
+	});
+
