--- a/app/views/shared/_tasklist.html.haml
+++ b/app/views/shared/_tasklist.html.haml
@@ -14,49 +14,4 @@
 						= t.title
 						= " (" + t.due_date_text + ")"
 					%div{ :id => "comp#{ t.id }", :class => "collapse", :style => "height: 0px;" }
-						- if t.job
-							.checkbox
-								%label
-									= check_box :task, :party_a_complete_date, :onclick => "complete_party_a( #{t.id} );", :checked => t.a_complete?
-									= t.job.party_a_name
-			
-							.checkbox
-								%label
-									= check_box :task, :party_b_complete, :onclick => "complete_party_b( #{t.id} );", :checked => t.b_complete?
-									= t.job.party_b_name
-	:javascript
-		function complete_party_a( task_id ) {
-			//begin_operation();
-			jQuery.post( '/tasks/'+task_id+'/complete_a', function(data) {
-				if (data=='complete' || data=='allcomplete') {
-					jQuery('.task-'+task_id).addClass( 'complete' );
-					if (data=='allcomplete') {
-						jQuery('#t'+task_id).addClass( 'complete' ).fadeOut(1000);
-						jQuery('#comp'+task_id).removeClass( 'in' );
-						//jQuery('#li'+task_id).fadeOut(1000);
-					}
-				} else {
-					jQuery('.task-'+task_id).removeClass( 'complete' );
-					jQuery('#t'+task_id).removeClass( 'complete' );
-				}
-				//end_operation();
-			} );
-		}
-
-		function complete_party_b( task_id ) {
-			//begin_operation();
-			jQuery.post( '/tasks/'+task_id+'/complete_b', function(data) {
-				if (data=='complete' || data=='allcomplete') {
-					jQuery('.task-'+task_id).addClass( 'complete' );
-					if (data=='allcomplete') {
-						jQuery('#t'+task_id).addClass( 'complete' ).fadeOut(1000);
-						jQuery('#comp'+task_id).removeClass( 'in' );
-						//jQuery('#li'+task_id).fadeOut(1000);
-					}
-				} else {
-					jQuery('.task-'+task_id).removeClass( 'complete' );
-					jQuery('#t'+task_id).removeClass( 'complete' );
-				}
-				//end_operation();
-			} );
-		}
+						= render :partial => "shared/checkboxes", :object => t
