--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -2,8 +2,16 @@
 
 %h1
 	Editing Task
-	= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, @task, :title => "Show Task"
+	= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, task_path(@task, :from => params[:from]), :title => "Show Task"
 
-= link_to '<< All Tasks', tasks_path
+- if params[:from] && !params[:from].blank?
+	- if params[:from].eql?("job")
+		= link_to "<< Return to job", job_path(@task.job)
+	- elsif params[:from].eql?("tasklist")
+		= link_to "<< Return to Task List", tasklist_jobs_path()
+	- else
+		= link_to "<< Back", :back
+- else
+	= link_to '<< All Tasks', tasks_path
 
 = render 'form'
